# optimization-manual

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  README.md  check-format.sh  verify.sh
.github/workflows/: blank.yml  main.yml
chap15/ex1/: CMakeLists.txt  ex1_bench.cpp  ex1_test.cpp  transform_avx.c  transform_avx.h  transform_sse.c  transform_sse.h
chap15/ex10/: CMakeLists.txt  ex10_bench.cpp  ex10_test.cpp  saxpy32.asm  saxpy32.c  saxpy32.h  saxpy32.s
chap15/ex12/: CMakeLists.txt  ex12_bench.cpp  ex12_test.cpp  saxpy16.asm  saxpy16.c  saxpy16.h  saxpy16.s  saxpy32.asm  saxpy32.s
chap15/ex14/: CMakeLists.txt  cond_scalar.asm  cond_scalar.c  cond_scalar.h  cond_scalar.s  cond_vmaskmov.asm  cond_vmaskmov.c  cond_vmaskmov.h  cond_vmaskmov.s  ex14_bench.cpp  ex14_test.cpp
chap15/ex16/: CMakeLists.txt  ex16_bench.cpp  ex16_test.cpp  three_tap_sse.asm  three_tap_sse.c  three_tap_sse.h  three_tap_sse.s
chap15/ex17/: CMakeLists.txt  ex17_bench.cpp  ex17_test.cpp  three_tap_avx.asm  three_tap_avx.c  three_tap_avx.h  three_tap_avx.s
chap15/ex18/: CMakeLists.txt  ex18_bench.cpp  ex18_test.cpp  three_tap_mixed_avx.asm  three_tap_mixed_avx.c  three_tap_mixed_avx.h  three_tap_mixed_avx.s
chap15/ex19/: CMakeLists.txt  ex19_bench.cpp  ex19_test.cpp  vblendps_transpose.asm  vblendps_transpose.c  vblendps_transpose.h  vblendps_transpose.s  vshufps_transpose.asm  vshufps_transpose.c  vshufps_transpose.h  vshufps_transpose.s
chap15/ex2/: CMakeLists.txt  ex2_bench.cpp  ex2_test.cpp  transform_avx.asm  transform_avx.c  transform_avx.h  transform_avx.s  transform_sse.asm  transform_sse.c  transform_sse.h  transform_sse.s
chap15/ex20/: CMakeLists.txt  ex20_bench.cpp  ex20_test.cpp  vinsertps_transpose.asm  vinsertps_transpose.c  vinsertps_transpose.h  vinsertps_transpose.s
chap15/ex21/: CMakeLists.txt  ex21_bench.cpp  ex21_test.cpp  mul_cpx_mem.asm  mul_cpx_mem.c  mul_cpx_mem.h  mul_cpx_mem.s  mul_cpx_reg.asm  mul_cpx_reg.c  mul_cpx_reg.h  mul_cpx_reg.s
chap15/ex22/: CMakeLists.txt  divps_sse.asm  divps_sse.c  divps_sse.h  divps_sse.s  ex22_bench.cpp  ex22_test.cpp  vdivps_avx.asm  vdivps_avx.c  vdivps_avx.h  vdivps_avx.s
chap15/ex23/: CMakeLists.txt  ex23_bench.cpp  ex23_test.cpp  rcpps_sse.asm  rcpps_sse.c  rcpps_sse.h  rcpps_sse.s  vrcpps_avx.asm  vrcpps_avx.c  vrcpps_avx.h  vrcpps_avx.s
chap15/ex24/: CMakeLists.txt  ex24_bench.cpp  ex24_test.cpp  rcpps_mul_sse.asm  rcpps_mul_sse.c  rcpps_mul_sse.h  rcpps_mul_sse.s  vrcpps_mul_avx.asm  vrcpps_mul_avx.c  vrcpps_mul_avx.h  vrcpps_mul_avx.s
chap15/ex25/: CMakeLists.txt  ex25_bench.cpp  ex25_test.cpp  sqrtps_divps_sse.asm  sqrtps_divps_sse.c  sqrtps_divps_sse.h  sqrtps_divps_sse.s  vsqrtps_vdivps_avx.asm  vsqrtps_vdivps_avx.c  vsqrtps_vdivps_avx.h  vsqrtps_vdivps_avx.s
chap15/ex26/: CMakeLists.txt  ex26_bench.cpp  ex26_test.cpp  rsqrtps_sse.asm  rsqrtps_sse.c  rsqrtps_sse.h  rsqrtps_sse.s  vrsqrtps_avx.asm  vrsqrtps_avx.c  vrsqrtps_avx.h  vrsqrtps_avx.s
chap15/ex27/: CMakeLists.txt  ex27_bench.cpp  ex27_test.cpp  rsqrtps_newt_sse.asm  rsqrtps_newt_sse.c  rsqrtps_newt_sse.h  rsqrtps_newt_sse.s  vrsqrtps_newt_avx.asm  vrsqrtps_newt_avx.c  vrsqrtps_newt_avx.h  vrsqrtps_newt_avx.s
chap15/ex28/: CMakeLists.txt  ex28_bench.cpp  ex28_test.cpp  sqrtps_sse.asm  sqrtps_sse.c  sqrtps_sse.h  sqrtps_sse.s  vsqrtps_avx.asm  vsqrtps_avx.c  vsqrtps_avx.h  vsqrtps_avx.s
chap15/ex29/: CMakeLists.txt  ex29_bench.cpp  ex29_test.cpp  sqrt_rsqrtps_sse.asm  sqrt_rsqrtps_sse.c  sqrt_rsqrtps_sse.h  sqrt_rsqrtps_sse.s  sqrt_vrsqrtps_avx.asm  sqrt_vrsqrtps_avx.c  sqrt_vrsqrtps_avx.h  sqrt_vrsqrtps_avx.s
chap15/ex3/: CMakeLists.txt  ex3_bench.cpp  ex3_test.cpp  poly_avx_128.asm  poly_avx_128.c  poly_avx_128.h  poly_avx_128.s  poly_avx_256.asm  poly_avx_256.c  poly_avx_256.h  poly_avx_256.s  poly_sse.asm  poly_sse.c  poly_sse.h  poly_sse.s
chap15/ex30/: CMakeLists.txt  ex30_bench.cpp  ex30_test.cpp  sqrt_rsqrtps_taylor_sse.asm  sqrt_rsqrtps_taylor_sse.c  sqrt_rsqrtps_taylor_sse.h  sqrt_rsqrtps_taylor_sse.s  sqrt_vrsqrtps_taylor_avx.asm  sqrt_vrsqrtps_taylor_avx.c  sqrt_vrsqrtps_taylor_avx.h  sqrt_vrsqrtps_taylor_avx.s
chap15/ex31/: CMakeLists.txt  ex31_bench.cpp  ex31_test.cpp  subsum_avx.asm  subsum_avx.c  subsum_avx.h  subsum_avx.s  subsum_sse.asm  subsum_sse.c  subsum_sse.h  subsum_sse.s
chap15/ex34/: CMakeLists.txt  ex34_bench.cpp  ex34_test.cpp  halfp.asm  halfp.c  halfp.h  halfp.s  singlep.asm  singlep.c  singlep.h  singlep.s
chap15/ex35/: CMakeLists.txt  ex35_bench.cpp  ex35_test.cpp  fp_fma.asm  fp_fma.c  fp_fma.h  fp_fma.s  fp_mul_add.asm  fp_mul_add.c  fp_mul_add.h  fp_mul_add.s
chap15/ex36/: CMakeLists.txt  ex36_bench.cpp  ex36_test.cpp  no_unroll_reduce.asm  no_unroll_reduce.c  no_unroll_reduce.h  no_unroll_reduce.s  unroll_reduce.asm  unroll_reduce.c  unroll_reduce.h  unroll_reduce.s
chap15/ex38/: lkt_intra_block.h
chap15/ex39/: CMakeLists.txt  ex39_test.cpp  klt_256.c  klt_256.h
chap15/ex40/: parmod10.h
chap15/ex41/: CMakeLists.txt  ex41_bench.cpp  ex41_test.cpp  i64toa_avx2.c  i64toa_avx2.h  ubsavx2.h
chap15/ex42/: avx2i_q2a_u63b.h
chap15/ex45/: CMakeLists.txt  ex45_test.cpp  vpgatherd_soft.asm  vpgatherd_soft.c  vpgatherd_soft.h  vpgatherd_soft.s
chap15/ex46/: CMakeLists.txt  avx2_vpgatherd.asm  avx2_vpgatherd.c  avx2_vpgatherd.h  avx2_vpgatherd.s  avx_vinsrt.asm  avx_vinsrt.c  avx_vinsrt.h  avx_vinsrt.s  ex46_bench.cpp  ex46_test.cpp  scalar.asm  scalar.c  scalar.h  scalar.s
chap15/ex47/: CMakeLists.txt  avx2_gatherpd.asm  avx2_gatherpd.c  avx2_gatherpd.h  avx2_gatherpd.s  avx_vinsert.asm  avx_vinsert.c  avx_vinsert.h  avx_vinsert.s  complex_num.h  ex47_bench.cpp  ex47_test.cpp
chap15/ex48/: CMakeLists.txt  avx2_min_max.asm  avx2_min_max.c  avx2_min_max.h  avx2_min_max.s  ex48_bench.cpp  ex48_test.cpp  min_max.h  (+4 more)
common/: CMakeLists.txt  optimisation_common.c  optimisation_common.h  supports_amx.asm  supports_amx.s  supports_amx_macos.s  supports_avx512.asm  supports_avx512.s  supports_avx512_bf16.asm  supports_avx512_bf16.s  supports_avx512_macos.s
(+703 files in other folders)
