set(avx_ex10_srcs ex10_test.cpp saxpy32.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex10_srcs ${avx_ex10_srcs} saxpy32.s)
elseif(MSVC)
set(avx_ex10_srcs ${avx_ex10_srcs} saxpy32.asm)
endif()
add_executable(avx_ex10_tests ${avx_ex10_srcs})
target_link_libraries(avx_ex10_tests gtest_main)
add_test(NAME avx_ex10_test COMMAND avx_ex10_tests)
