set(avx_ex12_srcs ex12_test.cpp saxpy32.c saxpy16.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex12_srcs ${avx_ex12_srcs} saxpy32.s saxpy16.s)
elseif(MSVC)
set(avx_ex12_srcs ${avx_ex12_srcs} saxpy32.asm saxpy16.asm)
endif()
add_executable(avx_ex12_tests ${avx_ex12_srcs})
target_link_libraries(avx_ex12_tests gtest_main)
add_test(NAME avx_ex12_test COMMAND avx_ex12_tests)
