set(avx_ex16_srcs ex16_test.cpp three_tap_sse.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex16_srcs ${avx_ex16_srcs} three_tap_sse.s)
elseif(MSVC)
set(avx_ex16_srcs ${avx_ex16_srcs} three_tap_sse.asm)
endif()
add_executable(avx_ex16_tests ${avx_ex16_srcs})
target_link_libraries(avx_ex16_tests gtest_main)
add_test(NAME avx_ex16_test COMMAND avx_ex16_tests)
