set(avx_ex17_srcs ex17_test.cpp three_tap_avx.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex17_srcs ${avx_ex17_srcs} three_tap_avx.s)
elseif(MSVC)
set(avx_ex17_srcs ${avx_ex17_srcs} three_tap_avx.asm)
endif()
add_executable(avx_ex17_tests ${avx_ex17_srcs})
target_link_libraries(avx_ex17_tests gtest_main)
add_test(NAME avx_ex17_test COMMAND avx_ex17_tests)
