set(avx_ex17_srcs)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex17_ass three_tap_avx.s)
elseif(MSVC)
set(avx_ex17_ass three_tap_avx.asm)
endif()
add_executable(avx_ex17_tests  ex17_test.cpp three_tap_avx.c ${avx_ex17_ass})
target_link_libraries(avx_ex17_tests gtest_main)

IF( benchmark_FOUND )
  add_executable(avx_ex17_bench ex17_bench.cpp ${avx_ex17_ass})
  target_link_libraries(avx_ex17_bench benchmark::benchmark)
ENDIF()

add_test(NAME avx_ex17_test COMMAND avx_ex17_tests)
