set(avx_ex18_srcs ex18_test.cpp three_tap_mixed_avx.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex18_srcs ${avx_ex18_srcs} three_tap_mixed_avx.s)
elseif(MSVC)
set(avx_ex18_srcs ${avx_ex18_srcs} three_tap_mixed_avx.asm)
endif()
add_executable(avx_ex18_tests ${avx_ex18_srcs})
target_link_libraries(avx_ex18_tests gtest_main)
add_test(NAME avx_ex18_test COMMAND avx_ex18_tests)
