set(avx_ex2_srcs ex2_test.cpp transform_sse.c transform_avx.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex2_srcs ${avx_ex2_srcs} transform_sse.s transform_avx.s)
elseif(MSVC)
set(avx_ex2_srcs ${avx_ex2_srcs} transform_sse.asm transform_avx.asm)
endif()
add_executable(avx_ex2_tests ${avx_ex2_srcs})
target_link_libraries(avx_ex2_tests gtest_main)
add_test(NAME avx_ex2_test COMMAND avx_ex2_tests)
