set(avx_ex20_srcs ex20_test.cpp vinsertps_transpose.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex20_srcs ${avx_ex20_srcs} vinsertps_transpose.s)
elseif(MSVC)
set(avx_ex20_srcs ${avx_ex20_srcs} vinsertps_transpose.asm)
endif()
add_executable(avx_ex20_tests ${avx_ex20_srcs})
target_link_libraries(avx_ex20_tests gtest_main)
add_test(NAME avx_ex20_test COMMAND avx_ex20_tests)
