set(avx_ex21_srcs ex21_test.cpp mul_cpx_reg.c mul_cpx_mem.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex21_srcs ${avx_ex21_srcs} mul_cpx_reg.s mul_cpx_mem.s)
elseif(MSVC)
set(avx_ex21_srcs ${avx_ex21_srcs} mul_cpx_reg.asm mul_cpx_mem.asm)
endif()
add_executable(avx_ex21_tests ${avx_ex21_srcs})
target_link_libraries(avx_ex21_tests gtest_main)
add_test(NAME avx_ex21_test COMMAND avx_ex21_tests)
