set(avx_ex23_srcs ex23_test.cpp rcpps_sse.c vrcpps_avx.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex23_srcs ${avx_ex23_srcs} rcpps_sse.s vrcpps_avx.s)
elseif(MSVC)
set(avx_ex23_srcs ${avx_ex23_srcs} rcpps_sse.asm vrcpps_avx.asm)
endif()
add_executable(avx_ex23_tests ${avx_ex23_srcs})

target_link_libraries(avx_ex23_tests gtest_main)
add_test(NAME avx_ex23_test COMMAND avx_ex23_tests)
