set(avx_ex3_src ex3_test.cpp poly_sse.c poly_avx_128.c poly_avx_256.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex3_src ${avx_ex3_src} poly_sse.s poly_avx_128.s poly_avx_256.s)
elseif(MSVC)
set(avx_ex3_src ${avx_ex3_src} poly_sse.asm poly_avx_128.asm poly_avx_256.asm)
endif()
add_executable(avx_ex3_tests ${avx_ex3_src})
target_link_libraries(avx_ex3_tests gtest_main)
add_test(NAME avx_ex3_test COMMAND avx_ex3_tests)
