set(avx_ex34_srcs ex34_test.cpp singlep.c halfp.c)
if(CMAKE_CXX_COMPILER_ID MATCHES Clang OR CMAKE_CXX_COMPILER_ID MATCHES GNU OR CMAKE_CXX_COMPILER_ID MATCHES AppleClang)
set(avx_ex34_srcs ${avx_ex34_srcs} singlep.s halfp.s)
elseif(MSVC)
set(avx_ex34_srcs ${avx_ex34_srcs} singlep.asm halfp.asm)
endif()
add_executable(avx_ex34_tests ${avx_ex34_srcs})

target_link_libraries(avx_ex34_tests gtest_main)
add_test(NAME avx_ex34_test COMMAND avx_ex34_tests)
